--- a/index.html
+++ b/index.html
@@ -1,1 +1,82 @@
-Hello World.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta http-equiv="X_UA-Compatible" content="IE-Edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title> *Maya's Portfolio*</title>
+<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/glightbox.min.css">
+</head>
+<body>
+    <!-- Begin header box-->
+    <header class="hero-box">
+        <section class="hero-image-box">
+            <img src="img/Dig1_2.jpg" alt="" class="hero-image">
+        </section>
+        <section class="hero-text-box">
+            <h1 class="hero-heading">Maya Orloff</h1>
+            <p class="hero-text">~Welcome to my web portfolio!~</p>
+        </section>
+    </header>
+    <!-- Begin portfolio gallery-->
+    <section class="portfolio-container">
+        <h1>Portfolio</h1>
+        <section class="portfolio-gallery">
+             
+            <div class="gallery-item">
+                <a href="img/Dig1_1.jpg" class="glightbox">
+                    <img src="img/Dig1_1.jpg" alt="Complementary colors" class="gallery-image">
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="img/Dig1_2.jpg" class="glightbox">
+                    <img src="img/Dig1_2.jpg" alt="Atmospheric perspective" class="gallery-image">
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="img/Des1_1.jpg" class="glightbox">
+                    <img src="img/Des1_1.jpg" alt="Mural print" class="gallery-image">
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="img/Des1_2.jpg" class="glightbox">
+                    <img src="img/Des1_2.jpg" alt="MOCA print" class="gallery-image">
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="img/Obs_1.jpg" class="glightbox">
+                    <img src="img/Obs_1.jpg" alt="Bread bowl" class="gallery-image">
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="img/Obs_2.jpg" class="glightbox">
+                    <img src="img/Obs_2.jpg" alt="Bagels" class="gallery-image">
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="img/SEM_1.jpg" class="glightbox">
+                    <img src="img/SEM_1.jpg" alt="Inner demons" class="gallery-image">
+                </a>
+            </div>
+
+            <div class="gallery-item">
+                <a href="img/SEM_2.jpg" class="glightbox">
+                    <img src="img/SEM_2.jpg" alt="Insomnia" class="gallery-image">
+                </a>
+            </div>
+
+        </section>
+    </section>
+    <script src="js/glightbox.min.js"></script>
+    <script type="text/javascript">
+        const lightbox = GLightbox ({loop: true});
+    </script>
+</body>
+</html>
